--- a/package.json
+++ b/package.json
@@ -26,6 +26,13 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@stripe/react-stripe-js": "^5.6.0",
+    "@stripe/stripe-js": "^8.8.0",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.97.0",
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "@volcengine/openapi": "^1.35.0",
     "ai": "^6.0.97",
     "class-variance-authority": "^0.7.1",
@@ -39,6 +46,7 @@
     "react-dom": "19.2.3",
     "react-dropzone": "^15.0.0",
     "sonner": "^2.0.7",
+    "stripe": "^20.3.1",
     "tailwind-merge": "^3.5.0",
     "use-debounce": "^10.1.0",
     "zod": "^4.3.6"
